<resources>
    <string name="app_name">PokeDex</string>
    <string name="pokemon_image_description">Pokemon main sprite</string>
    <string name="pokemon_list_fragment_label">Pokemon List</string>
    <string name="pokemon_detail_fragment_label">Pokemon Detail</string>
    <!--    types-->
    <string name="type_poison">poison</string>
    <string name="type_grass">grass</string>
    <string name="type_electric">electric</string>
    <string name="type_normal">normal</string>
    <string name="type_fire">fire</string>
    <string name="type_water">water</string>
    <string name="type_psychic">psychic</string>
    <string name="type_fighting">fighting</string>
    <string name="type_ghost">ghost</string>
    <string name="type_rock">rock</string>
    <string name="pokemon_order_number">N. %s</string>
    <!--    details-->
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="ability">Ability</string>
    <string name="health">HP</string>
    <string name="defense">Defense</string>
    <string name="attack">Attack</string>
    <string name="pokemon_weight">%s kg</string>
    <string name="pokemon_height">%s m</string>
</resources>